Fix mobile nav overflow: shrinkable flex items and smaller month heading

--- a/app/App.css
+++ b/app/App.css
@@ -351,8 +351,17 @@ sup {
   }
 
   #calendar nav {
-    padding-left: 7px;
-    padding-right: 7px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  /* Allow nav flex items to shrink below content width */
+  #calendar nav > * {
+    min-width: 0;
+  }
+
+  #calendar nav h2 {
+    font-size: 20px;
   }
 
   #calendar table {
